[package]
name = "discord_bot"
version = "0.1.0"
authors = ["Zij-IT <elijah.reed@hartvigsen.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
tokio = { version = "0.2", features = ["macros"] }
serenity = { default-features = false, features = ["client", "gateway", "model", 
          "rustls_backend"], version = "0.9.3"}
